tests/machine/x/rust/sort_stable.error
line 0: compile: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:2:102
  |
2 | ...std::collections::HashMap::new(); m.insert("n", 1); m.insert("v", "a"); m }, { let mut m = std::collections::HashMap::new(); m.insert(...
  |                                      -             -     ------      ^^^ expected integer, found `&str`
  |                                      |             |     |
  |                                      |             |     arguments to this method are incorrect
  |                                      |             this argument has type `{integer}`...
  |                                      ... which causes `m` to have type `HashMap<&str, {integer}>`
  |
help: the return type of this call is `&'static str` due to the type of the argument passed
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:2:88
  |
2 | ...shMap::new(); m.insert("n", 1); m.insert("v", "a"); m }, { let mut m = std::collections::HashMap::new(); m.insert("n", 1); m.insert("v...
  |                                    ^^^^^^^^^^^^^^---^
  |                                                  |
  |                                                  this argument influences the return type of `insert`
note: method defined here
 --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:2:193
  |
2 | ...std::collections::HashMap::new(); m.insert("n", 1); m.insert("v", "b"); m }, { let mut m = std::collections::HashMap::new(); m.insert(...
  |                                      -             -     ------      ^^^ expected integer, found `&str`
  |                                      |             |     |
  |                                      |             |     arguments to this method are incorrect
  |                                      |             this argument has type `{integer}`...
  |                                      ... which causes `m` to have type `HashMap<&str, {integer}>`
  |
help: the return type of this call is `&'static str` due to the type of the argument passed
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:2:179
  |
2 | ...shMap::new(); m.insert("n", 1); m.insert("v", "b"); m }, { let mut m = std::collections::HashMap::new(); m.insert("n", 2); m.insert("v...
  |                                    ^^^^^^^^^^^^^^---^
  |                                                  |
  |                                                  this argument influences the return type of `insert`
note: method defined here
 --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:2:284
  |
2 | ...std::collections::HashMap::new(); m.insert("n", 2); m.insert("v", "c"); m }];
  |                                      -             -     ------      ^^^ expected integer, found `&str`
  |                                      |             |     |
  |                                      |             |     arguments to this method are incorrect
  |                                      |             this argument has type `{integer}`...
  |                                      ... which causes `m` to have type `HashMap<&str, {integer}>`
  |
help: the return type of this call is `&'static str` due to the type of the argument passed
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:2:270
  |
2 | ...shMap::new(); m.insert("n", 2); m.insert("v", "c"); m }];
  |                                    ^^^^^^^^^^^^^^---^
  |                                                  |
  |                                                  this argument influences the return type of `insert`
note: method defined here
 --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0609]: no field `v` on type `HashMap<&str, {integer}>`
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:3:78
  |
3 |     let result = { let mut tmp1 = Vec::new();for &i in &items { let tmp2 = i.v; let tmp3 = i.n; tmp1.push((tmp3, tmp2)); } tmp1.sort_by(|...
  |                                                                              ^ unknown field

error[E0609]: no field `n` on type `HashMap<&str, {integer}>`
 --> /workspace/mochi/tests/machine/x/rust/sort_stable.rs:3:94
  |
3 |     let result = { let mut tmp1 = Vec::new();for &i in &items { let tmp2 = i.v; let tmp3 = i.n; tmp1.push((tmp3, tmp2)); } tmp1.sort_by(|...
  |                                                                                              ^ unknown field

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.

fn main() {